# space-invaders-sdl

./: .clang-tidy  .clangd  .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
art/: alien1.ase  alien2.ase  barrier.ase  bullet.ase  enemy-bullet.ase  explosion.ase  mothership.ase  player.ase
include/: circular-queue.hpp  circular_queue.hpp  sdl.hpp  tecs.hpp
sound/: explosion.sfxr  hit.sfxr  shoot.sfxr
src/: alien_movement_system.cpp  alien_movement_system.hpp  components.hpp  game_event.hpp  main.cpp  rectangle.hpp  sdl.cpp  tecs.cpp
valgrinds/: callgrind.out.10481  callgrind.out.25899  callgrind.out.27304  callgrind.out.34858
